# robot-pingpong-cpp

./: CMakeLists.txt  README.md
cmake-modules/: FindDynamixelSDK.cmake  FindLinearMotor.cmake
src/: arm.cpp  arm.h  capture.cpp  capture.h  constants.h  dlt.cpp  dynamixel.cpp  dynamixel.h  linear_motor.cpp  linear_motor.h  main.cpp  predictor.cpp  predictor.h  timer.cpp  timer.h  tracker.cpp  tracker.h  vision.cpp  vision.h  visualizer.cpp  visualizer.h
src/control/: arm.cpp  arm.h  linear_motor.cpp  linear_motor.h
src/dynamixel/: base_motor.h  dynamixel.cpp  dynamixel.h  motor.h  mx64_p2.h
src/servos/: dynamixel.cpp  dynamixel.h  macros.h  mx28_p2.h  mx64_p2.h  servo.h
src/utils/: regression.cpp  regression.h
src/vision/: capture.cpp  capture.h  dlt.h  tracker.cpp  tracker.h  vision.cpp  vision.h  visualizer.cpp  visualizer.h
